Fixed layout issues in fladhcard component

--- a/src/components/Flashcard.css
+++ b/src/components/Flashcard.css
@@ -3,7 +3,7 @@
   width: 360px;
   max-width: 80vw;
   height: 440px;
-  max-height: 50vh;
+  max-height: 75vh;
 }
 
 .flashcard-inner {
@@ -22,23 +22,38 @@
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
   gap: 24px;
 }
 
 .flashcard-front {
-  padding-bottom: 60px;
+  align-items: center;
+  justify-content: center;
 }
 
 .flashcard-back {
-  justify-content: flex-start;
-  padding-top: 40px;
+  justify-content: space-between;
+}
+
+.flashcard-back-content {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
 }
 
 .flashcard-character {
   font-size: 88px;
+
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .font-type-serif .flashcard-character {
@@ -49,12 +64,14 @@
   font-size: 28px;
   font-weight: normal;
   color: #000;
+  text-align: center;
 }
 
 .flashcard-pronunciation {
   font-size: 20px;
   font-weight: normal;
   color: #999;
+  text-align: center;
 }
 
 .flashcard-pronunciation b {
@@ -64,15 +81,14 @@
 .flashcard-audio {
   margin-right: auto;
   margin-left: auto;
-  margin-top: 20px;
   width: 240px;
   max-width: 100%;
 }
 
 .flashcard-actions {
-  margin-top: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 12px;
+  margin-top: auto;
 }
